tests/paczka1/small_fuzzy/98436023.err
Error in line 1: jTv S154 87,3
Error in line 8: jTv A900 31,5
Error in line 12: Rxp S491 82,7
